--- a/deploy.yml
+++ b/deploy.yml
@@ -7,8 +7,7 @@
       vars:
         server_names: 'wiki.improliga.cz'
         project_name: cz-improliga-wiki
-        project_version: '1.34.1-beta-3'
-        use_ssl: false
+        project_version: '1.34.1'
         env:
           DB_HOST: '{{ lookup("env", "DB_HOST") }}'
           DB_NAME: '{{ lookup("env", "DB_NAME") }}'
